# outlook2gcal

./: README.md  pyproject.toml  start.bat
src/: gcal.py  main.py
