[tool.poetry]
name = "outlook"
version = "0.1.0"
description = ""
authors = ["bp64536 <tange.tomoyuki@dp.mitsubishielectric.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
pywin32 = "^228"
requests = "^2.24.0"
google-api-python-client = "^1.12.3"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
